@@ -1,5 +1,5 @@
 /**
- * Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2016-2019
+ * Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2016-2021
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,10 @@
 package it.infn.mw.iam.core.oauth.profile.aarc;
 
 import java.util.HashSet;
-import java.util.Optional;
 import java.util.Set;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
-
-import com.google.common.collect.ImmutableSet;
 
 import it.infn.mw.iam.persistence.model.IamGroup;
 import it.infn.mw.iam.persistence.model.IamUserInfo;
@@ -31,7 +28,7 @@ import it.infn.mw.iam.persistence.model.IamUserInfo;
 public class AarcClaimValueHelper {
 
   public static final Set<String> ADDITIONAL_CLAIMS =
-      ImmutableSet.of("eduperson_scoped_affiliation", "eduperson_entitlement");
+      Set.of("eduperson_scoped_affiliation", "eduperson_entitlement");
 
   @Value("${iam.host}")
   String iamHost;
@@ -60,29 +57,13 @@ public class AarcClaimValueHelper {
   public Set<String> resolveGroups(IamUserInfo userInfo) {
 
     Set<String> encodedGroups = new HashSet<>();
-    userInfo
-      .getGroups()
-      .forEach(g -> encodedGroups.add(encodeGroup(g)));
+    userInfo.getGroups().forEach(g -> encodedGroups.add(encodeGroup(g)));
     return encodedGroups;
   }
 
   private String encodeGroup(IamGroup group) {
-
-    StringBuilder urn = new StringBuilder();
-
-    urn.append(String.format("urn:%s:group:", urnNamespace));
-
-    StringBuilder groupHierarchy = new StringBuilder(group.getName());
-    Optional<IamGroup> parent = Optional.ofNullable(group.getParentGroup());
-    while (parent.isPresent()) {
-      groupHierarchy.insert(0, parent.get().getName() + ":");
-      parent = Optional.ofNullable(parent.get().getParentGroup());
-    }
-    urn.append(groupHierarchy.toString());
-
-    urn.append(String.format("#%s", iamHost));
-
-    return urn.toString();
+    String encodedGroupName = group.getName().replaceAll("/", ":");
+    return String.format("urn:%s:group:%s#%s", urnNamespace, encodedGroupName, iamHost);
   }
 
 }
